--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,16 @@
     @@include('../templates/dashboard/why.html')
     <!---->
     @@include('../templates/dashboard/works.html')
+    <!---->
+    @@include('../templates/dashboard/how.html')
+    <!---->
+    @@include('../templates/dashboard/dashform.html')
+    <!---->
+    @@include('../templates/dashboard/reviews.html')
+    <!---->
+    @@include('../templates/dashboard/faq.html')
+    <!---->
+    @@include('../templates/dashboard/comand.html')
 
   </main>
 
