--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,10 @@
     @@include('../templates/dashboard/faq.html')
     <!---->
     @@include('../templates/dashboard/comand.html')
-
+    <!---->
+    @@include('../templates/dashboard/contacts.html')
+    <!---->
+    @@include('../templates/footer.html')
   </main>
 
   <!---->
