--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
       <div class="video-modal__backdrop"></div>
       <div class="video-modal__content">
         <button class="video-modal__close">✕</button>
-        <video class="video-modal__video" playsinline muted controls preload="metadata"></video>
+        <video class="video-modal__video" playsinline controls preload="metadata"></video>
       </div>
     </div>
   </main>
