--- a/src/index.html
+++ b/src/index.html
@@ -27,9 +27,35 @@
     @@include('../templates/footer.html')
     <div class="video-modal" hidden>
       <div class="video-modal__backdrop"></div>
-      <div class="video-modal__content">
+      <div class="video-modal__wrap">
         <button class="video-modal__close">✕</button>
-        <video class="video-modal__video" playsinline controls preload="metadata"></video>
+        <div class="video-modal__content">
+          <video class="video-modal__video" playsinline controls preload="metadata"></video>
+        </div>
+      </div>
+    </div>
+    <div class="modal show">
+      <div class="modal__backdrop"></div>
+      <div class="modal__wrap">
+        <div class="modal__content">
+          <button class="modal__close">
+            <svg class="icon" width="34" height="34">
+              <use href="/images/sprite.svg#close" fill="currentColor"></use>
+            </svg>
+          </button>
+          <picture>
+            <source srcset="/images/complete@2x.webp 2x, /images/complete.webp 1x" type="image/webp">
+            <source srcset="/images/complete@2x.png 2x, /images/complete.png 1x" type="image/png">
+            <img src="/images/complete.png" alt="" loading="lazy" class="modal__image">
+          </picture>
+          <div class="modal__title">
+            Спасибо!<br />
+            Ваша заявка получена
+          </div>
+          <div class="modal__text">
+            Наш менеджер с вами свяжется в ближайшее время для уточнения деталей проекта
+          </div>
+        </div>
       </div>
     </div>
   </main>
