--- a/src/detail.html
+++ b/src/detail.html
@@ -6,26 +6,20 @@
   @@include('../templates/header.html')
   <!---->
   <main class="main">
-    @@include('../templates/dashboard/first.html')
     <!---->
-    <!-- <div id="map" style="width: 100%; height: 500px"></div> -->
-    @@include('../templates/dashboard/why.html')
-    <!---->
-    @@include('../templates/dashboard/works.html')
-    <!---->
-    @@include('../templates/dashboard/how.html')
-    <!---->
-    @@include('../templates/dashboard/dashform.html')
-    <!---->
-    @@include('../templates/dashboard/reviews.html')
-    <!---->
-    @@include('../templates/dashboard/faq.html')
-    <!---->
-    @@include('../templates/dashboard/comand.html')
-    <!---->
-    @@include('../templates/dashboard/contacts.html')
 
-    <!---->
+    @@include('../templates/detail/detail-first.html')
+    <div class="before-after">
+      <div class="images">
+        <img src="/images/before.png" alt="До" class="before">
+        <div class="after-wrap">
+          <img src="/images/after.png" alt="После" class="after">
+        </div>
+        <div class="divider">
+          <span></span>
+        </div>
+      </div>
+    </div>
 
     <div class="video-modal" hidden>
       <div class="video-modal__backdrop"></div>
@@ -36,7 +30,7 @@
         </div>
       </div>
     </div>
-    <div class="modal show">
+    <div class="modal">
       <div class="modal__backdrop"></div>
       <div class="modal__wrap">
         <div class="modal__content">
