--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
         </div>
       </div>
     </div>
-    <div class="modal show">
+    <div class="modal">
       <div class="modal__backdrop"></div>
       <div class="modal__wrap">
         <div class="modal__content">
